Fix for overflow scrolling on centred content

--- a/src/css/base/_wrap.scss
+++ b/src/css/base/_wrap.scss
@@ -86,12 +86,17 @@
 
 .wrap-middle {
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   min-height: 100vh;
   min-height: 100svh;
-  padding-bottom: 5vh;
-  padding-bottom: 5svh;
+  padding: 25px 0;
+  padding-bottom: calc(25px + 3vh);
+
+  > div {
+    width: 100%;
+  }
 }
 
 .electron-drag {
